--- a/index.html
+++ b/index.html
@@ -3,14 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <title>Fake Mom Call</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="https://bootswatch.com/4/lux/bootstrap.min.css">
+
+    <link rel="stylesheet" type="text/css" href="https://getbootstrap.com/docs/4.0/examples/sign-in/signin.css">
+
+    <zlink rel="stylesheet" type="text/css" href="selfcaller.css">
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   </head>
 
-  <body>
-    <input id="phone-number-to-call" placeholder="Phone Number" />
+  <body class="text-center">
+      <form class="form-signin">
 
-    <button onclick="requestCall()">
-      Call Me
-    </button>
+        <img class="mb-4" src="https://image.flaticon.com/icons/png/512/134/134749.png" alt="" width="72" height="72">
+
+          <input id="phone-number-to-call"  class="form-control" placeholder="Phone number" required autofocus>
+
+
+       <button onclick="requestCall()" class="btn btn-lg btn-primary btn-block" type="submit">Call me</button>
+
+       <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+
+  </form>
+
 
     <script>
       function requestCall() {
